--- a/TheCoberto's Haste Potions/Haste Potions BP/manifest.json
+++ b/TheCoberto's Haste Potions/Haste Potions BP/manifest.json
@@ -2,8 +2,8 @@
 	"format_version": 2,
 	"header": {
 		"name": "Haste Potions",
-		"description": "Brew haste potions to enhance mining! \n§b1.21.23",
-		"uuid": "09741e87-67fa-4412-a758-b256c076b712",
+		"description": "Brew haste potions to enhance mining! \n§b1.21.31",
+		"uuid": "c726d560-e042-400f-aee7-c1dce2ac641f",
 		"version": [
 			1,
 			0,
@@ -11,42 +11,35 @@
 		],
 		"min_engine_version": [
 			1,
-			21,
-			20
+			20,
+			30
 		]
 	},
 	"modules": [
 		{
 			"description": "Behavior",
-			"version": [1, 0, 0],
+			"version": [ 1, 0, 0 ],
 			"uuid": "2e6be702-a799-d974-8e57-25806e012a64",
 			"type": "data"
+		},
+		{
+			"description": "JS",
+			"language": "javascript",
+			"type": "script",
+			"uuid": "3c7553d6-f51a-4177-8ce8-5b2f8508c446",
+			"version": "1.0.0-beta",
+			"entry": "scripts/main.js"
 		}
 	],
+	"capabilities": [ "script_eval" ],
 	"dependencies": [
 		{
-			"uuid": "fe0fa57c-92c3-445f-af6e-5a6c159a7960",
+			"uuid": "da56d739-ae2a-4550-9521-6f31331c6585",
 			"version": [ 1, 0, 0 ]
 		},
 		{
 			"module_name": "@minecraft/server",
-			"version": "1.12.0"
-		},
-		{
-			"module_name": "@minecraft/server-ui",
-			"version": "1.2.0"
+			"version": "1.6.0"
 		}
-	],
-	"metadata": {
-		"generated_with": {
-			"blockbench_entity_wizard": [
-				"1.3.1",
-				"1.4.0"
-			],
-			"blockbench_block_wizard": [
-				"1.2.1",
-				"1.2.2"
-			]
-		}
-	}
+	]
 }
